# agora-rust

./: Cargo.toml  README.md  build.rs  test.sh
src/: lib.rs
src/cpp/agorasdk/: AgoraSdk.cpp  AgoraSdk.h
src/cpp/include/: IAgoraLinuxSdkCommon.h  IAgoraRecordingEngine.h
