[package]
name = "agora-rust"
version = "0.2.0"
authors = ["Andy Bell <andy.bell@displaynote.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
cpp_build = "0.5"
